--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-openai
-streamlit
-pandas
-tensorflow
-transformers
+streamlit == 1.20.0
+pandas ==  1.5.3
+tensorflow == 2.12.0rc1
 streamlit_option_menu
-pymongo
-datetime
-numpy
-opencv-python
+numpy == 1.23.5
+opencv-python == 4.7.0.72
+
 
