--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-streamlit == 1.20.0
-pandas ==  1.5.3
-tensorflow == 2.12.0rc1
-streamlit_option_menu
-numpy == 1.23.5
-opencv-python == 4.7.0.72
-tensorflow.keras.models
+streamlit
+numpy
+tensorflow
+opencv-python-headless
